--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,16 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "app/Library/A.php",
+            "app/Library/Ucpaas.php"
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files":[
+        "app/Library/helper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
